<resources>
    <string name="app_name">WeatherApp</string>

    <string name="refresh">Refresh</string>

    <string name="wind">Wind: </string>
    <string name="clouds">Clouds: </string>
    <string name="humidity">Humidity: </string>
    <string name="pressure">Pressure: </string>

    <string name="templ_name">%1$s</string>
    <string name="templ_temp">%1$.0f &#176;C</string>
    <string name="templ_temp_plus">+%1$.0f &#176;C</string>
    <string name="templ_wind">%1$.0f m/s</string>
    <string name="templ_clouds">%1$.0f %%</string>
    <string name="templ_humidity">%1$.0f %%</string>
    <string name="templ_pressure">%1$.0f hPa</string>

    <string name="no_data">"N/A"</string>

    <string name="status_error">Unable to refresh data. Please check your Internet connection.</string>
    <string name="status_updated_when">Last update: %1$s</string>
    <string name="status_refreshing">Refreshing&#8230;</string>

    <string name="weather_icon_descr">Weather icon.</string>

    <string name="forecast">Forecast</string>
    <string name="forecast_templ_date">%1$s</string>

    <string name="add_city">Add city</string>
    <string name="city_name_hint">City name</string>
    <string name="add">Add</string>
    <string name="no_city_found">No city is found with this name.</string>
    <string name="add_city_error">Unable to connect to server. Please check your Internet connection.</string>

    <string name="cancel">Cancel</string>
</resources>
